<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_1080_1920_927"
    tools:context=".screens.GameCleopatra">


    <TextView
        android:id="@+id/score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@id/topVerticalGuideLine"
        app:layout_constraintBottom_toBottomOf="@id/topHorizontalGuideLine"
        android:text="@string/score"/>

    <TextView
        android:id="@+id/score_title_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@id/score_title"
        app:layout_constraintBottom_toBottomOf="@id/topHorizontalGuideLine"
        android:text="@string/zero"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topHorizontalGuideLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topVerticalGuideLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6"/>

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/play_game_now"
        android:textColor="#C83F2D"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTV">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/element_1_927"
            android:contentDescription="@string/snake" />

        <ImageView
            android:id="@+id/img2"
            android:contentDescription="@string/cross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/element_2_927"/>

        <ImageView
            android:id="@+id/img3"
            android:contentDescription="@string/coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/element_3_927"/>

        <ImageView
            android:id="@+id/img4"
            android:contentDescription="@string/pharaon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/element_4_927"/>

        <ImageView
            android:id="@+id/img5"
            android:contentDescription="@string/gold_plate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/element_5_927"/>

        <ImageView
            android:id="@+id/img6"
            android:contentDescription="@string/nifertiti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/element_6_927"/>
    </GridLayout>

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/play_to_win"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gridLayout"
        app:strokeColor="#F60B0B" />

    <Button
        android:id="@+id/btnChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/make_your_choice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPlay"
        app:strokeColor="#F60B0B" />

</androidx.constraintlayout.widget.ConstraintLayout>